--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
+@import url(https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css);
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body {
+  background-color: #e0e3e8;
+  font-family: "Rubik", sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #727e8c;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #475f7b;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+}
+section {
+  max-width: 800px;
+  background-color: #fff;
+  box-shadow: 0px 5px 10px rgba(90, 116, 148, 0.3);
+  border-radius: 6px;
+  height: 60vh;
+}
+.container {
+  display: flex;
+}
+.button {
+  background-color: #1c85e8;
+  width: 20%;
+  height: 60vh;
+  padding: 50px 0;
 }
 
-.App-link {
-  color: #61dafb;
+.button button {
+  font-size: 14px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.7);
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 10px;
+  width: 100%;
+  text-align: left;
+  margin-top: 15px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button button:hover {
+  color: #fff;
+}
+.button button.active {
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.content {
+  width: 80%;
+  padding: 30px;
+}
+.content h3 {
+  margin-bottom: 15px;
+  font-size: 20px;
+  font-weight: 500;
+}
+.desc {
+  display: flex;
+  align-items: center;
+}
+.desc i {
+  color: #1c85e8;
+}
+.desc p {
+  margin-bottom: 10px;
+  position: relative;
+  margin-left: 15px;
 }
